--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdi/font": "^6.7.96",
     "core-js": "^3.8.3",
     "material-design-icons-iconfont": "^6.7.0",
+    "vant": "^2.12.47",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
